# chain-of-summaries

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yaml
chain_of_summaries/: dataloader.py  index.py  metrics.py  qna.py  summary.py
src/: index.py  metrics.py  qna.py  summary.py
src/chain_of_summaries/: index.py  qna.py
